// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders without crashing with all props 1`] = `
<header
  className="o-header Some class"
>
  <section
    className="o-header__categories"
  >
    <h2>
      Categories
    </h2>
    <ul />
    <TextForm
      buttonA11yLabel="Label me."
      buttonTextLabel="Label me."
      hasBackground={false}
      hasButton={false}
      hasLabel={false}
      inputLabel="New Category"
      onSubmit={[Function]}
      onTextChange={[Function]}
      placeholder="New Category"
    />
  </section>
</header>
`;

exports[`Header renders without crashing with required props 1`] = `
<header
  className="o-header undefined"
>
  <section
    className="o-header__categories"
  >
    <h2>
      Categories
    </h2>
    <ul />
    <TextForm
      buttonA11yLabel="Label me."
      buttonTextLabel="Label me."
      hasBackground={false}
      hasButton={false}
      hasLabel={false}
      inputLabel="New Category"
      onSubmit={[Function]}
      onTextChange={[Function]}
      placeholder="New Category"
    />
  </section>
</header>
`;
